[package]
name = "tor-parse"
version = "0.1.0"
authors = ["D Keeler <mozkeeler@gmail.com>"]
license = "MPL-2.0"

[dependencies]
base64 = "0.9.0"
constant_time_eq = "0.1.3"
curl = "0.4.11"
curve25519-dalek = "^0.14"
ed25519-dalek = "^0.6"
getopts = "0.2"
hex = "0.3.1"
hmac = "0.5.0"
openssl = "0.10.3"
rand = "0.4.2"
rust-crypto = "^0.2"
sha2 = "0.7.0"
