[package]
name = "toroxide"
version = "0.1.0"
authors = ["D Keeler <mozkeeler@gmail.com>"]
license = "MPL-2.0"

[dependencies]
base64 = "0.9.0"
byteorder = "1.2.1"
constant_time_eq = "0.1.3"
curve25519-dalek = "^0.14"
ed25519-dalek = "^0.6"
hmac = "0.5.0"
num = "0.1.42"
rand = "0.4.2"
rust-crypto = "^0.2"
sha1 = "0.6.0"
sha2 = "0.7.0"
